--- a/iteration1/project.yml
+++ b/iteration1/project.yml
@@ -3,7 +3,7 @@ description: "Simple example of downloading and converting source data and train
 
 # Variables can be referenced across the project.yml using ${vars.var_name}
 vars:
-  config: "default"
+  config: "default-bilstm"
   gpu: -1
 
 remotes:
@@ -48,7 +48,7 @@ commands:
   - name: train
     help: "Train the full pipeline"
     script:
-      - "python -m spacy train configs/${vars.config}.cfg -o training/ --gpu-id ${vars.gpu} --paths.train corpus/train.spacy --paths.dev corpus/dev.spacy"
+      - "python -m spacy train configs/${vars.config}.cfg -o training/ --gpu-id ${vars.gpu} --paths.train corpus/train.spacy --paths.dev corpus/dev.spacy -c ./scripts/factory_methods.py"
     deps:
       - "corpus/train.spacy"
       - "corpus/dev.spacy"
