added number of NER labels as config parameter moved factory method definition to their respective modules

--- a/configs/default-bilstm.cfg
+++ b/configs/default-bilstm.cfg
@@ -47,6 +47,7 @@ factory = "bilstm_tagger"
 [components.ner.model]
 @architectures = "bilstm.model.v1"
 layers = 2
+num_labels = 11
 width = ${components.tok2vec.model.encode.width}
 
 [components.ner.model.tok2vec]
