added separate config params for embedding and lstm widths switched to using PyTorchLSTM

--- a/configs/default-bilstm.cfg
+++ b/configs/default-bilstm.cfg
@@ -48,7 +48,8 @@ factory = "bilstm_tagger"
 @architectures = "bilstm.model.v1"
 layers = 2
 num_labels = 11
-width = ${components.tok2vec.model.encode.width}
+emb_width = ${components.tok2vec.model.encode.width}
+lstm_width = 64
 
 [components.ner.model.tok2vec]
 @architectures = "spacy.Tok2VecListener.v1"
