Improved debug info output changed lang in default-bilstm.cfg to "hr"

--- a/configs/default-bilstm.cfg
+++ b/configs/default-bilstm.cfg
@@ -10,7 +10,7 @@ gpu_allocator = null
 seed = 0
 
 [nlp]
-lang = "en"
+lang = "hr"
 pipeline = ["tok2vec","ner"]
 tokenizer = {"@tokenizers":"spacy.Tokenizer.v1"}
 disabled = []
