switched model from Tok2Vec+BiLSTM to Transformer+SpacyNER

--- a/configs/transformer.cfg
+++ b/configs/transformer.cfg
@@ -11,7 +11,7 @@ seed = 0
 
 [nlp]
 lang = "hr"
-pipeline = ["tok2vec","ner"]
+pipeline = ["transformer","ner"]
 tokenizer = {"@tokenizers":"spacy.Tokenizer.v1"}
 disabled = []
 before_creation = null
@@ -21,40 +21,41 @@ batch_size = 1000
 
 [components]
 
-[components.tok2vec]
-factory = "tok2vec"
-
-[components.tok2vec.model]
-@architectures = "spacy.Tok2Vec.v2"
-
-[components.tok2vec.model.embed]
-@architectures = "spacy.MultiHashEmbed.v1"
-width = ${components.tok2vec.model.encode.width}
-rows = [2000,1000,1000,1000]
-attrs = ["NORM","PREFIX","SUFFIX","SHAPE"]
-include_static_vectors = false
-
-[components.tok2vec.model.encode]
-@architectures = "spacy.MaxoutWindowEncoder.v2"
-width = 64
-depth = 4
-window_size = 1
-maxout_pieces = 3
-
 [components.ner]
-factory = "bilstm_tagger"
+factory = "ner"
+moves = null
+update_with_oracle_cut_size = 100
+
+[components.transformer]
+factory = "transformer"
+max_batch_items = 4096
+
+[components.transformer.model]
+@architectures = "spacy-transformers.TransformerModel.v1"
+#name = "bert-base-cased"
+name = "classla/bcms-bertic"
+tokenizer_config = {"use_fast": true}
+
+# for the hr500k dataset, each Doc corresponds to a single sentence
+# this should be true for Docs to which the trained model is applied
+[components.transformer.model.get_spans]
+@span_getters = "spacy-transformers.doc_spans.v1"
 
 [components.ner.model]
-@architectures = "bilstm.model.v1"
-layers = 2
-num_labels = 21
-emb_width = ${components.tok2vec.model.encode.width}
-lstm_width = 64
+@architectures = "spacy.TransitionBasedParser.v1"
+state_type = "ner"
+extra_state_tokens = false
+hidden_width = 64
+maxout_pieces = 2
+use_upper = true
+nO = null
 
 [components.ner.model.tok2vec]
-@architectures = "spacy.Tok2VecListener.v1"
-width = ${components.tok2vec.model.encode.width}
-upstream = "*"
+@architectures = "spacy-transformers.TransformerListener.v1"
+grad_factor = 1.0
+
+[components.ner.model.tok2vec.pooling]
+@layers = "reduce_mean.v1"
 
 [corpora]
 
