transformer.cfg - disabled transformer update

--- a/configs/transformer.cfg
+++ b/configs/transformer.cfg
@@ -52,7 +52,9 @@ nO = null
 
 [components.ner.model.tok2vec]
 @architectures = "spacy-transformers.TransformerListener.v1"
-grad_factor = 1.0
+# to "freeze"/fix the tranformer, ie, not update it, grad has to be set to 0
+# apparently, puting the transformer on the list of frozen components isn't enough (?bug)
+grad_factor = 0.0
 
 [components.ner.model.tok2vec.pooling]
 @layers = "reduce_mean.v1"
